# bazel-roast

./: .gitignore  README.md
.devcontainer/: MODULE.baze  README.md  devcontainer.json
labs/fundamentals/01_dependency_model/: README.md
labs/fundamentals/01_dependency_model/broken/: BUILD.bazel  util.txt
labs/fundamentals/01_dependency_model/fixed/: BUILD.bazel  app.py  main.txt
labs/fundamentals/02_visibility/: README.md
labs/fundamentals/03_query_graph/: README.md
labs/fundamentals/04_select_and_config/: README.md
labs/fundamentals/05_actions_and_incrementality/: README.md
labs/lab01_select_platform/: BUILD.bazel  README.md
labs/lab01_select_platform/broken/: BUILD.bazel  README.md
labs/lab01_select_platform/solution/: BUILD.bazel  README.md  header_linux.txt  header_mac.txt  linux_note.txt  mac_note.txt
labs/lab01_select_platform/solution/notes/: linux.txt  mac.txt  macos.txt
labs/production_cases/: README.md
labs/production_cases/01_ci_breaks_on_platform/: README.md
labs/production_cases/01_ci_breaks_on_platform/rare/: README.md
labs/production_cases/01_ci_breaks_on_platform/rare/broken/: BUILD.bazel  linux_message.txt  mac_message.txt
labs/production_cases/01_ci_breaks_on_platform/rare/broken/message_lib/: BUILD.bazel
labs/production_cases/01_ci_breaks_on_platform/rare/fixed/: BUILD.bazel
labs/production_cases/01_ci_breaks_on_platform/rare/fixed/message_lib/: BUILD.bazel
labs/production_cases/01_ci_breaks_on_platform/welldone/: README.md
labs/production_cases/01_ci_breaks_on_platform/welldone/broken/: BUILD.bazel
labs/production_cases/02_binary_size_regression/: README.md
labs/production_cases/03_forbidden_dependency_detected/: README.md
labs/production_cases/04_unexpected_test_execution/: README.md
labs/production_cases/05_incremental_build_regression/: README.md
labs/production_cases/06_layering_violation/: README.md
labs/production_cases/07_feature_flag_inconsistency/: README.md
labs/production_cases/08_duplicate_implementation_problem/: README.md
labs/production_cases/09_hidden_transitive_dependency/: README.md
labs/production_cases/10_build_performance_hotspot/: README.md
scripts/: check_lab01.sh  lab01_check.sh  setup_bazelisk.sh  workshop  workshop.sh
