# Lab 01: select() + platforms

# This genrule generates report.txt by concatenating a platform-specific input.
# The mac branch is intentionally broken: it points to a file that doesn't exist.

genrule(
    name = "report",
    srcs = select({
        "//platforms:is_linux": ["linux_message.txt"],
        "//platforms:is_mac": ["mac_message.txt"],
        "//conditions:default": ["linux_message.txt"],
    }),
    outs = ["report.txt"],
    cmd = "cat $(SRCS) > $@",
)
