filegroup(
    name = "util",
    srcs = ["util.txt"],
)

genrule(
    name = "app",
    srcs = [
        "main.txt",
        # TODO: Fix me: this rule *uses* util.txt but does not declare it as an input.
        # Add the missing prerequisite so the build succeeds.
    ],
    outs = ["app.out"],
    cmd = "cat $(location main.txt) $(location util.txt) > $@",
)
